# DSPy-RAG-Intelligence

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: config.py
app/core/: critic.py  generation.py  query_understanding.py  ranker.py  retrieval.py  revision.py
app/core/optimization/: feedback.py
app/core/parsers/: __init__.py  toon_parser.py
app/infrastructure/: embedding_model.py  milvus_client.py
app/pipeline/: critic_loop.py  rag_pipeline.py
app/ui/: dashboard.py  main.py  sidebar.py
baml_client/: __init__.py  async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: clients.baml  main.baml
requirements/: 01_InfrastructureRequirement.md  02_RAGPipelineRequirement.md  03_BAMLValidatorRequirement.md  04_MultiAgentCriticRequirement.md  05_CachingLayerRequirement.md  06_SystemIntegrationRequirement.md  07_UIComponentRequirement.md  08_EvaluationDashboardRequirement.md  09_ImplementedEnhancements.md
scripts/: verify_baml.py  verify_pipeline.py  verify_toon.py
